[gd_scene load_steps=32 format=2]

[ext_resource path="res://Assets/CorruptEnemy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/CorruptEnemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/light.png" type="Texture" id=3]
[ext_resource path="res://PossessParticles.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/EnemyHurt.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/foom_0.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/hit5.mp3" type="AudioStream" id=7]

[sub_resource type="Shader" id=1]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform vec4 flash_color:hint_color=vec4(1.0);
uniform float flash_modifier:hint_range(0.0,1.0)=0;

void fragment(){
	vec4 color=texture(TEXTURE,UV);
	color.rgb=mix(color.rgb,flash_color.rgb,flash_modifier);
	COLOR=color;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="Shader" id=3]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform vec4 flash_color:hint_color=vec4(1.0);
uniform float flash_modifier:hint_range(0.0,1.0)=0;

void fragment(){
	vec4 color=texture(TEXTURE,UV);
	color.rgb=mix(color.rgb,flash_color.rgb,flash_modifier);
	COLOR=color;
}"

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = SubResource( 3 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 32, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 32, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "Die",
"speed": 7.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Idle",
"speed": 4.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 8, 12 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 11, 10 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 46, 18 )

[node name="CorruptEnemy" type="KinematicBody2D"]
material = SubResource( 2 )
collision_layer = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 4 )
frames = SubResource( 21 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 4 )
shape = SubResource( 22 )

[node name="HitBox" type="Area2D" parent="."]
modulate = Color( 0.054902, 0.0509804, 0.0509804, 1 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, 3 )
shape = SubResource( 23 )

[node name="WallCast" type="RayCast2D" parent="."]
position = Vector2( 16, -6 )
enabled = true
cast_to = Vector2( 0, 25 )

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ReactionTime" type="Timer" parent="."]

[node name="DangerZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DangerZone"]
position = Vector2( 0, 3 )
shape = SubResource( 24 )

[node name="ColorRect" type="ColorRect" parent="DangerZone"]
visible = false
margin_left = -45.0
margin_top = -15.0
margin_right = 44.0
margin_bottom = 19.0
color = Color( 1, 0, 0, 0.054902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="DangerZone/ColorRect"]
visible = false
position = Vector2( 47, 18.5 )
scale = Vector2( 2.92969, 1.07422 )
texture = ExtResource( 3 )
texture_scale = 0.03
color = Color( 1, 0, 0, 1 )
energy = 9.0

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 12.0
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Particles2D" parent="." instance=ExtResource( 4 )]

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 1.0
attenuation = 1.4

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -2.0
pitch_scale = 2.0
attenuation = 1.42

[node name="DieSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
attenuation = 1.42

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_KnockbackTimer_timeout"]
[connection signal="timeout" from="ReactionTime" to="." method="_on_ReactionTime_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
